# Test2

./: CreateNodesCommands.txt  CreateNodesCommands.txt~  Functions  Functions~  Plan  Plan~  Read.txt  Read.txt~  TODO  clear_release_after_install.sh  create_jar.sh  create_jar.sh~  create_release.sh  install_release.sh~  start_core.sh  test2.sh  testbash.sh  testbash.sh~
CLib/: CLib.kdev4  CMakeLists.txt
CLib/.kdev4/: CLib.kdev4
CLib/includes/: BotNode.h  BotNode.h~  CollectionServiceClient.h  CollectionServiceServer.h  CollectionSubscribe.h  IBotMsgInterface.h
CLib/src/: BotNode.cxx
CLib_11/: CLib_11.kdev4  CMakeLists.txt  CMakeLists.txt~
CLib_11/.kdev4/: CLib_11.kdev4
CLib_11/includes/: BotNode.h
CLib_11/src/: BotNode.cxx~
JLib/: rm.txt  rm.txt~
JLib/src/test/: BLA_BLA_BLA.java  BLA_BLA_C.java  BLA_BLA_S.java  ChildClass.java  ParentClass.java  Run.java  TestSrvReq.java  TestSrvResp.java
JS_UI_Interaction_Lib/: ibot_ui_interaction.js
LangLibs/py_interface/: setup.py
LangLibs/py_interface-1.3/: PKG-INFO  configure
LangLibs/py_interface/py_interface/: __init__.py
LangLibs/python-erlang-interface-master/: README  README~
LangLibs/python-erlang-interface-master/tests/: test_rpc.py  test_rpc.py~
PLib/: setup.py
PLib/core/: BotNode.py  CollectionServiceServer.py  CollectionSubscribe.py  IBotNode.py  TestMsg.py  __init__.py  test.py  test2.py
PLib/py_i_bot_os/: BotNode.py  CollectionServiceClient.py  test.py
ibot_os/: Makefile  rebar.config  rebar.config~
ibot_os/ibot_communication/include/: ibot_comm_commands.hrl  ibot_comm_records.hrl
ibot_os/ibot_communication/src/: ibot_communication.app.src  ibot_communication_app.erl  ibot_communication_db_app.erl  ibot_communication_sup.erl  ibot_communication_topic_srv.erl
ibot_os/ibot_core/: testcom
ibot_os/ibot_core/include/: config_db_keys.hrl  env_params.hrl  ibot_core_create_project_paths.hrl  ibot_core_modules_names.hrl  ibot_core_node_compilation_commands.hrl  ibot_core_os_definition.hrl  ibot_core_reserve_atoms.hrl  ibot_core_spec_symbols.hrl  ibot_core_supervisor_definition.hrl  ibot_gen_srvs.hrl  ibot_table_commands.hrl  ibot_table_names.hrl  msg_srv_java_generate_templates.hrl  project_create_commands.hrl
ibot_os/ibot_core/priv/: create_jar.sh  create_jar.sh~
ibot_os/ibot_core/src/: ibot_core.app.src  ibot_core_app.erl  ibot_core_cmd.erl  ibot_core_cmd_cdir.erl  ibot_core_config_db.erl  ibot_core_db_func.erl  ibot_core_db_srv.erl  ibot_core_env.erl  ibot_core_func_cmd.erl  ibot_core_func_cmd_cdir.erl  ibot_core_func_connect_to_cores.erl  ibot_core_generator_msg_srv.erl  ibot_core_srv_compile_nodes.erl  ibot_core_srv_connect.erl  ibot_core_srv_interaction.erl  ibot_core_srv_os.erl  ibot_core_srv_process.erl  ibot_core_srv_project_info_loader.erl  ibot_core_sup.erl  test.erl  testsup.erl
ibot_os/ibot_db/include/: ibot_db_modules.hrl  ibot_db_records.hrl  ibot_db_records_service.hrl  ibot_db_table_names.hrl
ibot_os/ibot_db/src/: ibot_db.app.src  ibot_db_app.erl  ibot_db_func.erl  ibot_db_func_config.erl  ibot_db_func_services.erl  ibot_db_func_topics.erl  ibot_db_srv.erl  ibot_db_srv_func_nodes.erl  ibot_db_srv_func_project.erl  ibot_db_sup.erl
ibot_os/ibot_events/c_src/: qwe
ibot_os/ibot_events/include/: ibot_events_handlers.hrl  ibot_events_logger_actions.hrl  ibot_events_srv_logger_messages_type.hrl
ibot_os/ibot_events/src/: complex3.erl  ibot_events.app.src  ibot_events_app.erl  ibot_events_evs.erl  ibot_events_srv_logger.erl  ibot_events_srv_node_interaction.erl  ibot_events_sup.erl  test.erl
ibot_os/ibot_generator/include/: msg_srv_cpp_generate_templates.hrl  msg_srv_java_generate_templates.hrl  msg_srv_js_generate_templates.hrl  msg_srv_python_generate_templates.hrl  project_dirs.hrl  spec_file_ext.hrl
ibot_os/ibot_generator/src/: ibot_generator.app.src  ibot_generator_app.erl  ibot_generator_func_cpp.erl  ibot_generator_func_js.erl  ibot_generator_func_python.erl  ibot_generator_msg_srv.erl  ibot_generator_sup.erl
ibot_os/ibot_nodes/include/: ibot_comm_records.hrl  ibot_comm_tables.hrl  ibot_nodes_modules.hrl  ibot_nodes_registration_info.hrl  ibot_nodes_service.hrl  tables_names.hrl
ibot_os/ibot_nodes/src/: ibot_nodes.app.src  ibot_nodes_app.erl  ibot_nodes_comm_db_srv.erl  ibot_nodes_comm_topic_srv.erl  ibot_nodes_connector.erl  ibot_nodes_connector_srv.erl  ibot_nodes_monitor_srv.erl  ibot_nodes_monitoring_sup.erl  ibot_nodes_registrator_srv.erl  ibot_nodes_runner_srv.erl  ibot_nodes_srv_connector.erl  ibot_nodes_srv_monitor.erl  ibot_nodes_srv_registrator.erl  ibot_nodes_srv_runner.erl  ibot_nodes_srv_service.erl  ibot_nodes_srv_topic.erl  ibot_nodes_srv_ui_interaction.erl  ibot_nodes_sup.erl  pingpong.erl  r.erl  r2.erl  runner_test.erl
ibot_os/ibot_os/releases/: RELEASES
ibot_os/ibot_services/: reltool.config
ibot_os/rel/: reltool.config  reltool.config~
ibot_os/rel2/: reltool.config  reltool.config~
project/srv/: ServiceTest.srv~  TestTypesMessage.srv
release/: clear_release_after_install.sh
release/CLib/: CMakeLists.txt  CMakeLists.txt~
release/CLib/includes/: BotNode.h
release/CLib/src/: BotNode.cxx
release/project/: project.conf  project.conf~
tp/new_project/: project.conf  project.conf~  project_remote.conf
tp/new_project/src/first_cpp/: CMakeLists.txt  node_config.conf
tp/new_project/src/first_cpp/.kdev4/: first_cpp.kdev4
tp/new_project/src/first_cpp/src/: first_cpp.cxx
tp/tp/: project.conf  project.conf~
tp/tp/src/TestCmake/: CMakeLists.txt  TestCmake.kdev4
tp/tp/src/TestCmake/.kdev4/: TestCmake.kdev4
tp/tp/src/TestCmake/src/: TC.cxx  TestMessage.cxx
tp/tp/src/TestCpp/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_lib.txt
tp/tp/src/TestCpp/src/: ParentClass.cxx~  cnode_c.cxx  cnode_c.cxx~  complex.cxx  tutorial.c  tutorial.cxx  tutorial.cxx~  tutorial.c~
tp/tp/src/TestCppin_2/: CMakeLists.txt  CMakeLists.txt~  CMakeLists_2.txt  TestCppin_2.kdev4
tp/tp/src/TestCppin_2/.kdev4/: TestCppin_2.kdev4
tp/tp/src/TestCppin_2/src/: ParentClass.cxx~  main.cxx  main.cxx~
tp/tp2/: project.conf  project.conf~
(+384 files in other folders)
